# cnn_transformer_hybrid

./: .gitignore  FULL_TRAIN_CPP_GUIDE.md  README.md  fix_git_pull_push.sh  log  memo.txt  paper_predictions_result.md  requirements.txt
build_dgx_spark/: CMakeCache.txt  Makefile  cifar10_infer  cmake_install.cmake
configs/: cifar10_hybrid_full.yaml
cpp_infer/: CMakeLists.txt  main.cpp
prediction_results/: README.md  cpp_full_test_report.html  visualize_cpp_results.py
python/: build_contact_sheet.py  evaluate_checkpoint.py  export_cifar10_class_subset.py  export_torchscript.py  train.py
python/models/: __init__.py  baselines.py  hybrid.py
python/utils/: __init__.py  data.py  metrics.py  seed.py
runs/dgx_spark_full_cpp/cpp_full_test/: predictions.tsv
scripts/: dgx_spark_full_cpp_pipeline.sh  dgx_spark_full_cpp_pipeline_skip_existing.sh
